# petope

./: .gitignore  Cargo.toml  README.md  document.tex  flake.nix
.github/workflows/: rust.yml
src/: based_key.rs  config.rs  connection.rs  connection_manager.rs  discovery.rs  main.rs  node.rs  peer.rs  peer_addr.rs  router.rs  tun.rs  utils.rs
